Facebook integration mostly done

--- a/cincyFoodTrucks/src/main/res/values/strings.xml
+++ b/cincyFoodTrucks/src/main/res/values/strings.xml
@@ -126,5 +126,7 @@ mail updates</string>
      <string name="strNewsFeed">Newsfeed</string>
     <string name="strConnectFacebook">Connect Facebook</string>
     <string name="facebook_app_id">696538993808289</string>
+    <string name="facebook_page_name">FACEBOOK_PAGE_NAME</string>
+    <string name="facebook_page_access_token">FACEBOOK_PAGE_ACCESS_TOKEN</string>
     
 </resources>
